--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ env.DOCKERHUB_REPO_OWNER }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
   build:
@@ -57,7 +57,7 @@ jobs:
         image: ${{ env.DOCKERHUB_REPO_OWNER }}/${{ env.TAG_STEM }}
         registry: docker.io
         dockerfile: ${{ env.DOCKERFILE_FOLDER }}/${{ env.TAG_STEM }}.Dockerfile
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ env.DOCKERHUB_REPO_OWNER }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         tags: ${{ env.LATEST_TAG }}, v${{ env.MAJOR_VERSION }}.${{ github.run_number }}
 
