--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,19 +40,9 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    # Build test image
-    - name: Build and export to Docker
-      uses: mr-smithers-excellent/docker-build-push@v6.3
-      with:
-        image: ${{ env.DOCKERHUB_REPO_OWNER }}/${{ env.TAG_STEM }}
-        registry: docker.io
-        dockerfile: ${{ env.DOCKERFILE_FOLDER }}/${{ env.TAG_STEM }}.Dockerfile
-        pushImage: false
-        tags: test
-
-    # If the test passed, build the full-size images for all platforms
+    # Build the image for all platforms
     - uses: mr-smithers-excellent/docker-build-push@v6.3
-      name: Build full-sized images
+      name: Build the ${{ env.DOCKERHUB_REPO }} image
       with:
         image: ${{ env.DOCKERHUB_REPO_OWNER }}/${{ env.TAG_STEM }}
         registry: docker.io
@@ -61,11 +51,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         tags: ${{ env.LATEST_TAG }}, v${{ env.MAJOR_VERSION }}.${{ github.run_number }}
 
-    # Delete the test image
-    - name: Delete the test image
-      run: |
-        docker image rm ${{ env.DOCKERHUB_REPO_OWNER }}/${{ env.TAG_STEM }}:${{ env.TEST_TAG }}
     # Push only the slim image to Docker Hub
-    - name: Push slim and full-size images to Docker Hub
+    - name: Push images to Docker Hub
       run: |
         docker image push ${{ env.DOCKERHUB_REPO_OWNER }}/${{ env.TAG_STEM }} --all-tags
